# kvdb

./: .gitignore  CMakeLists.txt  DONE  Makefile  README  TODO  ihash.c  ihash_sizes.py  ihash_test.c  kvdb.c  kvdb.h  kvdb_admin.c  kvdb_i.h  kvdb_o.c  kvdb_test.c  stringset.c  stringset.h  util.h
doc/: memory-usage.txt
src/: CMakeLists.txt  codec.h  ihash.c  ihash.h  kvdb.c  kvdb.h  kvdb.i  kvdb_i.h  kvdb_index.c  kvdb_io.c  kvdb_o.c  kvdb_query.c  sll.h  stringset.c  stringset.h  util.h
test/: CMakeLists.txt  codec_test.c  ihash_test.c  kvdb_index_test.c  kvdb_test.c  stringset_test.c
